Fix QFieldCloud logo reflowing to new line on small mobile screens

--- a/css/qfield.css
+++ b/css/qfield.css
@@ -7,7 +7,7 @@ body {
   padding-top: 120px;
   font-family: "bio-sans", sans-serif;
   font-size: 13pt;
-font-weight: 300;
+  font-weight: 300;
 }
 
 #navbar {
@@ -94,8 +94,10 @@ span.shadow-background {
 
 .navbar-brand img {
   display:inline-block;
-  height: 70px;
-  width: 70px;
+  width: auto;
+  height: 52px;
+  margin-top: 8px;
+  max-width: calc(100vw - 100px);
 }
 
 footer.footer {
